--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ pillow = "^10.0.1"
 psycopg2 = "^2.9.9"
 django-filter = "^23.3"
 djangorestframework-simplejwt = "^5.3.0"
+coverage = "^7.3.2"
 
 
 [build-system]
