--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,9 @@ psycopg2 = "^2.9.9"
 django-filter = "^23.3"
 djangorestframework-simplejwt = "^5.3.0"
 coverage = "^7.3.2"
+drf-yasg = "^1.21.7"
+django-cors-headers = "^4.3.0"
+requests = "^2.31.0"
 
 
 [build-system]
