--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ coverage = "^7.3.2"
 drf-yasg = "^1.21.7"
 django-cors-headers = "^4.3.0"
 requests = "^2.31.0"
+python-dotenv = "^1.0.0"
 
 
 [build-system]
